Added error default template

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid mt-5">
 		<table border="1" class="">
 			<thead>
 				<tr>
@@ -27,7 +27,7 @@
 	    		</tr>
 			</tbody>
 		</table>
-		<a class="h3" href="/new">Add new contact</a>
+		<a class="h3 btn btn-primary mt-3" href="/new">Add new contact</a>
 	</div>
 </body>
 </html>
