--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid mt-5">
 		<h1>New/Edit Contact</h1>
 		<form action="#" th:action="@{/save}" th:object="${contact}" method="post" >
 		  <div class="form-group">
