--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="container-fluid mt-5">
-		<h1>New/Edit Contact</h1>
+		<h1 class="mb-5">New/Edit Contact</h1>
 		<form action="#" th:action="@{/save}" th:object="${contact}" method="post" >
 		  <div class="form-group">
 		    <label for="name">Name</label>
@@ -25,7 +25,9 @@
 		    <label for="address">Address</label>
 		    <input type="text" class="form-control" id="address" aria-describedby="address" th:field="*{address}" placeholder="Enter address">
 		  </div>
+		  <input type="hidden" id="action" th:field="*{id}" />
 		  <button type="submit" class="btn btn-primary">Submit</button>
+		  <a href="/" class="btn btn-secondary">Back</a>
 		</form>
 	</div>
 </body>
